# dyrics

./: .gitignore  Cargo.toml  Dockerfile  config.example.toml
.github/workflows/: docker-publish.yml
src/: config.rs  discord.rs  error.rs  lib.rs  lyrics.rs  main.rs  spotify.rs
