[package]
name = "dyrics"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rspotify = { version = "0.13", features = ["client-reqwest", "reqwest-rustls-tls", "cli"] }
once_cell = "1.19"
chrono = "0.4"
figment = {version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
eyre = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde_with = "3.8"
serde_json = "1.0"